# LLM-BASED-devops-assistant

infra-copilot-starter/: .env.example  .gitignore  CURSOR_PLAN.md  Dockerfile.api  Dockerfile.slack  Makefile  README.md  docker-compose.yml  pyproject.toml
infra-copilot-starter/.github/workflows/: ci.yml
infra-copilot-starter/scripts/: run_slack.py
infra-copilot-starter/src/app/: api.py  audit.py  main.py  models.py  orchestrator.py  prompts.py
infra-copilot-starter/src/cli/: main.py
infra-copilot-starter/src/ingestors/: nginx.py  prometheus.py  systemd.py
infra-copilot-starter/src/slack/: bot.py
infra-copilot-starter/tests/: test_api.py  test_api_endpoints.py  test_orchestrator.py  test_parsers.py
