
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infra-copilot"
version = "0.1.0"
description = "LLM-powered DevOps copilot (API + CLI + Slack) for log/alert remediation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "typer>=0.12.3",
  "langchain>=0.2.0",
  "httpx>=0.27.0",
  "langchain-openai>=0.1.7",
  "langchain-anthropic>=0.1.22",
  "requests>=2.31",
  "slack-bolt>=1.18.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4","requests>=2.31","ruff>=0.5","mypy>=1.10"]

[tool.ruff]
line-length = 100
